# vaast-app

./: .gitignore  README.md  pyproject.toml  test_tree_viz.py
data/: bacdive-taxonomy.parquet  img_db.parquet  phd_db.parquet  pls_db.parquet  virus_host_db.parquet
scripts/: debug_annotations.py  debug_label_centering_v3.py  develop_tree_explorer.py  full_collection_tree.nwk  generate_full_collection_tree.py  tree-viz.md  verify_tree_viz.py
tests/: test_chatbot_calls.py
vaast_app/: app.py  chatbot_region.py  genetic_tools_region.py  main_frame.py  modal.py  render.py  strain_stats.py  taxa_query_region.py  tree_region.py  tree_viz_region.py
vaast_app/assets/: chatbot-function.js  typography.css  ui.css
vaast_app/pages/: landing_page.py  visualizer_page.py
vaast_app/utils/: bacdive_utils.py  concurrent.py  genetic_tool_wrapper.py  ncbi_taxa.py  read_utils.py  search_by_taxa.py  summary_region.py  tree_utils.py  tree_viz_utils.py  type_utils.py
vaast_app/utils/chatbot/: chat_logger.py  chatbot_calls.py  chatbot_utils.py
