[tool.poetry]
name = "vaast-app"
version = "0.1.0"
description = ""
authors = [
    "Christopher Neely <cjneely@lbl.gov>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash-bootstrap-components = "^1.4.1"
ete3 = "^3.1.3"
pandas = "^2.3.3"
polars = "^0.19.19"
pyarrow = "^22.0.0"
scipy = "^1.16.3"
plotly = "^6.5.0"
numpy = "^2.3.5"
matplotlib = "^3.10.8"
paper-qa = {version = "5.11.0", extras = ["pypdf", "local"]}
dash = {extras = ["diskcache"], version = "^2.5"}
diskcache = "^5.6.3"
phylotree-dash = {file = "external_assets/phylotree_dash-0.0.5.tar.gz"}
langchain_anthropic = "^1.3.1"
openai = "^1.51.0"
litellm = "1.53.3"
ollama = "^0.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "*"
pytest-cov = "^4.1.0"
ruff = "^0.5.3"
pyright = "^1.1.365"
ruff-lsp = "^0.0.62"
black = "^24.4.2"
pyrefly = "^0.47.0"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "D1",
    "D41",
    "FIX",
]
extend-select = [
    "I",
]
ignore = [
    "D105",
    "D415",
]

[tool.black]
line-length = 120

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
